force-app/main/default/objects/Opportunity/fields/Site_Details__c.field-meta.xml
<CustomField>
    <fullName>Site_Details__c</fullName>
    <label>Site Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be Built</fullName>
            </value>
            <value>
                <fullName>Ready Built</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>