force-app/main/default/objects/Opportunity/fields/Site_Details_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Site_Details_Remarks__c</fullName>
    <label>Site Details Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>