force-app/main/default/objects/Opportunity/fields/Space_for_Machine_movement__c.field-meta.xml
<CustomField>
    <fullName>Space_for_Machine_movement__c</fullName>
    <label>Space for Machine movement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ok</fullName>
            </value>
            <value>
                <fullName>Not Ok</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>