force-app/main/default/objects/Opportunity/fields/Space_for_Machine_Movement_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Space_for_Machine_Movement_Remarks__c</fullName>
    <label>Space for Machine Movement Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>