force-app/main/default/objects/Opportunity/fields/Specify_Cometitor_s__c.field-meta.xml
<CustomField>
    <fullName>Specify_Cometitor_s__c</fullName>
    <label>Specify Cometitor(s)</label>
    <type>TextArea</type>
</CustomField>