force-app/main/default/objects/Opportunity/fields/Steam_Provision_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Steam_Provision_Remarks__c</fullName>
    <label>Steam Provision Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>