force-app/main/default/objects/Opportunity/fields/Summary_of_Position__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Position__c</fullName>
    <formula>&quot;Strengths: &quot; &amp; Strengths__c &amp; BR() &amp; &quot;Red Flags: &quot; &amp; Red_Flags__c</formula>
    <label>Summary of Position</label>
    <type>Text</type>
</CustomField>