force-app/main/default/objects/Opportunity/fields/Timing_for_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Timing_for_Priorities__c</fullName>
    <label>Timing for Priorities</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Work it in</fullName>
            </value>
            <value>
                <fullName>Later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>