force-app/main/default/objects/Opportunity/fields/Total_Guest_laundry_load_for_drying__c.field-meta.xml
<CustomField>
    <fullName>Total_Guest_laundry_load_for_drying__c</fullName>
    <label>Total Guest laundry load for drying</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>