force-app/main/default/objects/Opportunity/fields/Total_Guest_laundry_load_for_Ironing__c.field-meta.xml
<CustomField>
    <fullName>Total_Guest_laundry_load_for_Ironing__c</fullName>
    <label>Total No. of Guest rooms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>