force-app/main/default/objects/Opportunity/fields/Total_Load_per_cycle__c.field-meta.xml
<CustomField>
    <fullName>Total_Load_per_cycle__c</fullName>
    <label>Total Load per Cycle for Wash only</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>