force-app/main/default/objects/Opportunity/fields/Total_Load_per_Cycle_for__c.field-meta.xml
<CustomField>
    <fullName>Total_Load_per_Cycle_for__c</fullName>
    <label>Total no. of ironing sheet  per hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>