force-app/main/default/objects/Opportunity/fields/Total_Load_per_Cycle_for_Dry_Load__c.field-meta.xml
<CustomField>
    <fullName>Total_Load_per_Cycle_for_Dry_Load__c</fullName>
    <label>Total Load per Cycle for Dry Load</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>