force-app/main/default/objects/Opportunity/fields/Total_No_Of_Unshaped_Garments_Load_Per__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Of_Unshaped_Garments_Load_Per__c</fullName>
    <label>Total No of Unshaped Garments per hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>