force-app/main/default/objects/Opportunity/fields/Total_Potential_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Potential_Volume__c</fullName>
    <label>Total Potential Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>