force-app/main/default/objects/Opportunity/fields/Total_Power_Req_Connected_Load__c.field-meta.xml
<CustomField>
    <fullName>Total_Power_Req_Connected_Load__c</fullName>
    <label>Total Power Req.(Connected Load)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>