force-app/main/default/objects/Opportunity/fields/TotalPotentialVolume__c.field-meta.xml
<CustomField>
    <fullName>TotalPotentialVolume__c</fullName>
    <label>Total Potential Volume</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>