force-app/main/default/objects/Opportunity/fields/Type_of_Setup__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Setup__c</fullName>
    <label>Type of Setup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Setup</fullName>
            </value>
            <value>
                <fullName>Existing Setup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>