force-app/main/default/objects/Opportunity/fields/Unshaped_Garments_Machine_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Unshaped_Garments_Machine_Capacity__c</fullName>
    <label>Unshaped Garments Machine Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>