force-app/main/default/objects/Opportunity/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Educational Institution</fullName>
            </value>
            <value>
                <fullName>Pharma</fullName>
            </value>
            <value>
                <fullName>Health Care</fullName>
            </value>
            <value>
                <fullName>Non-Profit Organization</fullName>
            </value>
            <value>
                <fullName>Fire Service Department</fullName>
            </value>
            <value>
                <fullName>Prison</fullName>
            </value>
            <value>
                <fullName>Yoga Center</fullName>
            </value>
            <value>
                <fullName>Dry Cleaning</fullName>
            </value>
            <value>
                <fullName>Hotel Laundry</fullName>
            </value>
            <value>
                <fullName>Regular Laundry</fullName>
            </value>
            <value>
                <fullName>Guest laundry</fullName>
                <isActive>false</isActive>
                <label>Guest Laundry</label>
            </value>
            <value>
                <fullName>Hospital</fullName>
                <isActive>false</isActive>
                <label>Hospital</label>
            </value>
            <value>
                <fullName>Hospitality</fullName>
                <isActive>false</isActive>
                <label>Hospitality</label>
            </value>
            <value>
                <fullName>Hotel</fullName>
                <isActive>false</isActive>
                <label>Hotel</label>
            </value>
            <value>
                <fullName>Laundromats</fullName>
                <isActive>false</isActive>
                <label>Laundromats</label>
            </value>
            <value>
                <fullName>Organization</fullName>
                <isActive>false</isActive>
                <label>Organization</label>
            </value>
            <value>
                <fullName>Staff Uniform</fullName>
                <isActive>false</isActive>
                <label>Staff Uniform</label>
            </value>
            <value>
                <fullName>Vertical</fullName>
                <isActive>false</isActive>
                <label>Vertical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>