force-app/main/default/objects/Opportunity/fields/Vit_Table_Efficiency_hour__c.field-meta.xml
<CustomField>
    <fullName>Vit_Table_Efficiency_hour__c</fullName>
    <label>Vit Table Efficiency/hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>