force-app/main/default/objects/Opportunity/fields/Washing_Machine_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Washing_Machine_Capacity__c</fullName>
    <label>Washing Machine Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>