force-app/main/default/objects/Opportunity/fields/Water_Intel_Size_With_Ball_Value_M_T_S__c.field-meta.xml
<CustomField>
    <fullName>Water_Intel_Size_With_Ball_Value_M_T_S__c</fullName>
    <label>Water Intel Size With Ball Value(M.T.S.)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>