force-app/main/default/objects/Opportunity/fields/Water_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Water_Remarks__c</fullName>
    <label>Water Remarks</label>
    <length>250</length>
    <type>Text</type>
</CustomField>