force-app/main/default/objects/Opportunity/fields/What__c.field-meta.xml
<CustomField>
    <fullName>What__c</fullName>
    <label>What</label>
    <type>TextArea</type>
</CustomField>