force-app/main/default/objects/Opportunity/fields/Who__c.field-meta.xml
<CustomField>
    <fullName>Who__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>