force-app/main/default/objects/Opportunity/fields/Who_Name__c.field-meta.xml
<CustomField>
    <fullName>Who_Name__c</fullName>
    <formula>Who__r.FirstName +&apos; &apos;+  Who__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Who Name</label>
    <type>Text</type>
</CustomField>