force-app/main/default/objects/Opportunity/fields/With_Dryer__c.field-meta.xml
<CustomField>
    <fullName>With_Dryer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>With Dryer</label>
    <type>Checkbox</type>
</CustomField>