force-app/main/default/objects/Opportunity/validationRules/Blue_Sheet_Validation_IDW.validationRule-meta.xml
<ValidationRule>
    <fullName>Blue_Sheet_Validation_IDW</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISPICKVAL(StageName, &quot;Closed Lost&quot;),ISPICKVAL(StageName, &quot;Closed Won&quot;)) ,
Amount &gt;= 1000000,
ISPICKVAL(Product_category__c, &quot;IDW&quot;),
ISBLANK( Blue_Sheet_Created_Date__c ),
!$User.Bypass_Validation_Rules__c,
NOT(CONTAINS($Profile.Name, &apos;Admin&apos;))
)</errorConditionFormula>
    <errorMessage>BlueSheet needs to be filled when the Opportunity Stage is set to Closed and the Amount is greater than or equal to 10,00,000.</errorMessage>
</ValidationRule>