force-app/main/default/objects/Opportunity/validationRules/BOQ_USR_unapproved_Heating_Type_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>BOQ_USR_unapproved_Heating_Type_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Product_category__c, &quot;ILM&quot;),
    NOT(BOQ_URS_Approved__c),
    ISPICKVAL(Heating_Type__c, &quot;&quot;),
    !$User.Bypass_Validation_Rules__c,				
				NOT(CONTAINS($Profile.Name, &apos;Admin&apos;))
)</errorConditionFormula>
    <errorDisplayField>Heating_Type__c</errorDisplayField>
    <errorMessage>Heating Type is required when Opportunity is not BOQ/URS and Product Category is ILM.</errorMessage>
</ValidationRule>