force-app/main/default/objects/Opportunity/validationRules/Can_not_move_to_site_visit.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_move_to_site_visit</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(StageName, &quot;Load Calculation&quot;),
        ISPICKVAL(PRIORVALUE(StageName), &quot;Qualification&quot;)
    ),
    NOT(Bypass_Validation__c)
)</errorConditionFormula>
    <errorMessage>You can&apos;t change the stage to site visit without creating a visit.</errorMessage>
</ValidationRule>