force-app/main/default/objects/Opportunity/validationRules/Closed_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.Bypass_Validation_Rules__c,
NOT(CONTAINS($Profile.Name, &apos;Admin&apos;)),
PRIORVALUE( IsClosed ) = True,
NOT( Account.PreInstallationUpdateAllow__c)
)</errorConditionFormula>
    <errorMessage>Once Opportunity is Closed you can not Edit the Page</errorMessage>
</ValidationRule>