force-app/main/default/objects/Opportunity/validationRules/Load_Calculation_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Load_Calculation_is_mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
				OR(ISPICKVAL(StageName, &apos;Load Calculation&apos;),
							ISPICKVAL(StageName, &apos;Proposal/Price Quote&apos;),
							ISPICKVAL(StageName, &apos;Negotiation/Review&apos;),
							ISPICKVAL(StageName, &apos;Closed Won&apos;),
							ISPICKVAL(StageName, &apos;Closed Lost&apos;)
						),
    BOQ_URS_Approved__c = false, 				
    NOT(LoadCalculated__c),
    ISPICKVAL(Type_of_Setup__c, &apos;New&apos;)
							
   )</errorConditionFormula>
    <errorMessage>Please Calculate the Load to move further</errorMessage>
</ValidationRule>