force-app/main/default/objects/Opportunity/validationRules/Next_Follow_Up_Date_Change_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_Follow_Up_Date_Change_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Next_Follow_up_Date_Time__c),
    NOT(ISBLANK(Next_Follow_up_Date_Time__c)),
    ISBLANK(TEXT(Reasons__c)),
				!$User.Bypass_Validation_Rules__c,
    NOT(CONTAINS($Profile.Name, &apos;Admin&apos;))
)</errorConditionFormula>
    <errorDisplayField>Reasons__c</errorDisplayField>
    <errorMessage>If the Next Follow-Up Date changes reasons field fill to Mandatory</errorMessage>
</ValidationRule>