force-app/main/default/objects/Opportunity/validationRules/Product_Category_should_not_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Category_should_not_change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(LoadCalculated__c = true,
				ISCHANGED(Product_category__c ),
				!$User.Bypass_Validation_Rules__c,
    NOT(CONTAINS($Profile.Name, &apos;Admin&apos;))						
)</errorConditionFormula>
    <errorMessage>We can not change product category once the load is calculated.</errorMessage>
</ValidationRule>